apps/base/uptime-kuma/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`monitoring.cruznet.io`)
    kind: Rule
    services:
    - name: uptime-kuma
      kind: Service
      port: 3001
  tls:
    secretName: uptime-kuma-cert
